--- a/src/screens/List/index.css
+++ b/src/screens/List/index.css
@@ -12,17 +12,37 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    width: 1128px;
-    height: 824px;
+    width: 60vw;
+    height: 84vh;
     background-color: white;
     border-radius: 24px;
-    padding: 16px;
+    padding: 24px;
 }
 
 .list-screen-header {
     display: flex;
     flex-direction: row;
+    width: 100%;
     align-items: center;
+    justify-content: space-between; 
+       
+}
+
+.list-screen-title-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 1rem 2rem;
+ 
+}
+
+.list-screen-header-title {
+    font-size: 32px;
+    margin-left: 12px;
+}
+.list-screen-header-button-container {
+    width: 160px;
+    margin-right: 2rem;
 }
 
 .logo-image {
@@ -30,7 +50,7 @@
     height: 72px;
 }
 
-.list-container{
+.list-screen-list-container {
     display: flex;
     width: 100%;
     height: 100%;
