--- a/src/components/ListRender/index.css
+++ b/src/components/ListRender/index.css
@@ -6,6 +6,6 @@
     height: 80vh;
     width: 60vw;
     padding: 12px;
-    overflow-y: scroll;
+    overflow-y: hidden;
     overflow-x: hidden;
 }
