--- a/src/components/Input/index.css
+++ b/src/components/Input/index.css
@@ -3,12 +3,18 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    width: 452px;
+    width: 400px;
     height: 48px;
     border-radius:8px ;
     border: 2px solid #7785db;
     margin-bottom: 16px;
     
+}
+
+@media screen and (max-width: 420px) {
+    .input-container{
+        max-width: 300px;
+    }
 }
 
 .input-label {
