--- a/src/components/ListCard/index.css
+++ b/src/components/ListCard/index.css
@@ -10,13 +10,13 @@
     background-color: #f2f4ff;
     border-radius: 12px;
     margin-bottom: 24px;
-    cursor: pointer;
 }
 
 .checkbox {
     display: flex;
     align-items: center;
     justify-content: center;
+    border-radius: 50%;
     width: 24px;
     height: 24px;
     object-fit: contain;
@@ -28,7 +28,7 @@
 
 .list-card-text-container {
     display: flex;
-    width: 97%;
+    width: 90%;
     flex-direction: column;
 }
 
@@ -42,8 +42,18 @@
     font-size: 14px;
 }
 
+.arrow-icon-container{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: center;
+    width: 10%;
+   cursor: pointer;
+}
+
 .arrow-icon {
     width: 6px;
     height: 12px;
     object-fit: contain;
+ 
 }
