--- a/src/components/ListRender/index.css
+++ b/src/components/ListRender/index.css
@@ -3,9 +3,10 @@
     flex-direction: column;
     flex-direction: column;
     align-items: center;
-    height: 80vh;
+    box-sizing: border-box;
+    max-height: 75vh;
     width: 60vw;
     padding: 12px;
-    overflow-y: hidden;
+    overflow-y: scroll;
     overflow-x: hidden;
 }
