--- a/src/components/Modal/index.css
+++ b/src/components/Modal/index.css
@@ -2,8 +2,6 @@
     position: fixed;
     top: 0;
     left: 0;
-    bottom: 0;
-    right: 0;
     display: flex;
     align-items: flex-end;
     justify-content: flex-end;
@@ -15,20 +13,25 @@
 .modal-content {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    border-radius: 25px;
+    height: 94vh;
     width: 26vw;
     background-color: #fff;
     align-items: center;
+    justify-content: center;
     padding-top: 16px;
     padding-left: 24px;
     padding-right: 24px;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+    margin-right: 2vh;
 }
 
 .modal-header {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content:space-between ;
+    justify-content: space-between;
     width: 100%;
     margin-bottom: 24px;
 }
@@ -45,7 +48,7 @@
     cursor: pointer;
 }
 
-.buttons-container{
+.buttons-container {
     display: flex;
     flex-direction: column;
     height: 12vh;
@@ -53,3 +56,25 @@
     justify-content: space-between;
     margin-top: 62vh;
 }
+@media screen and (max-width: 830px) {
+    .modal-content {
+        width: 60vw;
+    }
+
+    .buttons-container {
+        height: 10vh;
+        margin-top: 62vh;
+    }
+}
+
+@media screen and (max-width: 420px) {
+    .modal-content {
+        width: 100vw;
+    }
+
+    .buttons-container {
+        height: 18vh;
+        margin-top: 48vh;
+    }
+}
+
