--- a/src/components/Input/index.css
+++ b/src/components/Input/index.css
@@ -11,11 +11,7 @@
     
 }
 
-@media screen and (max-width: 420px) {
-    .input-container{
-        max-width: 300px;
-    }
-}
+
 
 .input-label {
     font-size: 12px;
@@ -34,4 +30,14 @@
 }
 .input:focus{
     outline: none;
+}
+@media screen and (max-width: 830px) {
+    .input-container{
+        width: 100%;
+    }
+}
+@media screen and (max-width: 420px) {
+    .input-container{
+        max-width: 300px;
+    }
 }
