--- a/src/components/Modal/index.css
+++ b/src/components/Modal/index.css
@@ -19,12 +19,10 @@
     background-color: #fff;
     align-items: center;
     justify-content: center;
-    padding-top: 16px;
+    padding-top: 5px;
     padding-left: 24px;
     padding-right: 24px;
-    margin-top: 2vh;
-    margin-bottom: 2vh;
-    margin-right: 2vh;
+    margin: 2vh;
 }
 
 .modal-header {
@@ -54,7 +52,17 @@
     height: 12vh;
     width: 100%;
     justify-content: space-between;
-    margin-top: 62vh;
+    margin-top: 50vh;
+}
+@media screen and (max-width: 1400px) {
+    .modal-content {
+        width: 35vw;
+    }
+}
+@media screen and (max-width: 1060px) {
+    .modal-content {
+        width: 45vw;
+    }
 }
 @media screen and (max-width: 830px) {
     .modal-content {
@@ -62,19 +70,20 @@
     }
 
     .buttons-container {
-        height: 10vh;
-        margin-top: 62vh;
+        height: 12vh;
+        margin-top: 54vh;
     }
 }
 
 @media screen and (max-width: 420px) {
     .modal-content {
         width: 100vw;
+        margin: 2vh;
     }
 
     .buttons-container {
-        height: 18vh;
-        margin-top: 48vh;
+        height: 12vh;
+        margin-top: 52vh;
     }
 }
 
