--- a/src/App.css
+++ b/src/App.css
@@ -4,4 +4,9 @@
   justify-content: center;
 }
 
+:root {
+  --color-primary: #346C2F;
+  --color-secondary: #d9f397;
+  --title-color: #31522d;
+}
 
