--- a/src/components/ListCard/index.css
+++ b/src/components/ListCard/index.css
@@ -7,7 +7,7 @@
     height: 58px;
     min-height: 58px;
     padding: 0px 12px;
-    background-color: #f2f4ff;
+    background: linear-gradient(to left ,#e7ffd0, #ffffff);
     border-radius: 12px;
     margin-bottom: 24px;
 }
@@ -36,7 +36,7 @@
     font-size: 16px;
     font-weight: 800;
     margin-bottom: 4px;
-    color: #7785db;
+    color: var(--color-primary);
 }
 .list-card-subtitle {
     font-size: 14px;
@@ -56,4 +56,7 @@
     height: 12px;
     object-fit: contain;
  
+}
+bv{
+    color: #00484d;
 }
