--- a/src/screens/Home/index.css
+++ b/src/screens/Home/index.css
@@ -3,7 +3,7 @@
     display: flex;
     width: 100vw;
     height: 100vh;
-    background-color: #7785db;
+    background: linear-gradient(to left, var(--color-secondary), var(--color-primary));
     align-items: center;
     justify-content: center;
 }
