--- a/src/screens/List/index.css
+++ b/src/screens/List/index.css
@@ -2,7 +2,7 @@
     display: flex;
     width: 100vw;
     height: 100vh;
-    background-color: #7785db;
+    background: linear-gradient(to left, var(--color-secondary), var(--color-primary));
     align-items: center;
     justify-content: center;
 }
@@ -37,6 +37,7 @@
 .list-screen-header-title {
     font-size: 32px;
     margin-left: 12px;
+    color: var(--title-color);
 }
 .list-screen-header-button-container {
     width: 160px;
