Added absolute imports and ESlint/Prettier configuration

--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,7 @@
 }
 
 :root {
-  --color-primary: #346C2F;
+  --color-primary: #346c2f;
   --color-secondary: #d9f397;
   --title-color: #31522d;
 }
-
