--- a/src/screens/Home/index.css
+++ b/src/screens/Home/index.css
@@ -1,85 +1,87 @@
-
 .home-screen-container {
-    display: flex;
-    width: 100vw;
-    height: 100vh;
-    background: linear-gradient(to left, var(--color-secondary), var(--color-primary));
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  background: linear-gradient(
+    to left,
+    var(--color-secondary),
+    var(--color-primary)
+  );
+  align-items: center;
+  justify-content: center;
 }
 
 .home-screen-content-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 552px;
-    height: 720px;
-    background-color: white;
-    border-radius: 24px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 552px;
+  height: 720px;
+  background-color: white;
+  border-radius: 24px;
 }
 
 .shopping-bag-image {
-    width: 220px;
-    height: auto;
+  width: 220px;
+  height: auto;
 }
 
 .home-screen-title {
-    max-width: 320px;
-    text-align: center;
-    margin-bottom: 16px;
+  max-width: 320px;
+  text-align: center;
+  margin-bottom: 16px;
 }
 
 .home-screen-subtitle {
-    max-width: 320px;
-    text-align: center;
-    margin-bottom: 36px;
+  max-width: 320px;
+  text-align: center;
+  margin-bottom: 36px;
 }
 
 .home-screen-subtitle-description {
-    max-width: 452px;
-    text-align: left;
-    margin-bottom: 16px;
+  max-width: 452px;
+  text-align: left;
+  margin-bottom: 16px;
 }
 
 .home-screen-button-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 452px;
-    margin-top: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 452px;
+  margin-top: 24px;
 }
 
 @media screen and (max-width: 420px) {
-    .home-screen-content-container {
-        max-width: 320px;
-        max-height: 600px;
-        padding: 12px;
-    }
+  .home-screen-content-container {
+    max-width: 320px;
+    max-height: 600px;
+    padding: 12px;
+  }
 
-    .home-screen-button-container {
-        max-width: 300px;
-        margin-top: 12px;
-    }
+  .home-screen-button-container {
+    max-width: 300px;
+    margin-top: 12px;
+  }
 
-    .shopping-bag-image {
-        width: 140px;
-        height: auto;
-    }
+  .shopping-bag-image {
+    width: 140px;
+    height: auto;
+  }
 
-    .home-screen-subtitle-description {
-        max-width: 300px;
-    }
+  .home-screen-subtitle-description {
+    max-width: 300px;
+  }
 
-    .home-screen-subtitle {
-        max-width: 300px;
-
-    }
+  .home-screen-subtitle {
+    max-width: 300px;
+  }
 }
 
 @media screen and (max-width: 830px) {
-    .home-screen-container {
-        overflow-x: hidden;
-        overflow-y: hidden;
-    }
+  .home-screen-container {
+    overflow-x: hidden;
+    overflow-y: hidden;
+  }
 }
