--- a/src/screens/List/index.css
+++ b/src/screens/List/index.css
@@ -1,82 +1,83 @@
 .list-screen-container {
-    display: flex;
-    width: 100vw;
-    height: 100vh;
-    background: linear-gradient(to left, var(--color-secondary), var(--color-primary));
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  background: linear-gradient(
+    to left,
+    var(--color-secondary),
+    var(--color-primary)
+  );
+  align-items: center;
+  justify-content: center;
 }
 
 .list-screen-content-container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-    width: 60vw;
-    height: 84vh;
-    background-color: white;
-    border-radius: 24px;
-    padding: 24px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  width: 60vw;
+  height: 84vh;
+  background-color: white;
+  border-radius: 24px;
+  padding: 24px;
 }
 
 .list-screen-header {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    align-items: center;
-    justify-content: space-between; 
-       
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .list-screen-title-container {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 .list-screen-header-title {
-    font-size: 32px;
-    margin-left: 12px;
-    color: var(--title-color);
+  font-size: 32px;
+  margin-left: 12px;
+  color: var(--title-color);
 }
 .list-screen-header-button-container {
-    width: 160px;
-    margin-right: 2rem;
+  width: 160px;
+  margin-right: 2rem;
 }
 
 .logo-image {
-    width: 72px;
-    height: 72px;
+  width: 72px;
+  height: 72px;
 }
 
 .list-screen-list-container {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
 }
 @media screen and (max-width: 830px) {
-    .list-screen-header-title{
-        font-size: 24px;
-    }
+  .list-screen-header-title {
+    font-size: 24px;
+  }
 }
 
 @media screen and (max-width: 440px) {
-    .list-screen-header-title{
-        font-size: 14px;
-        line-height: 14px;
-    }
-    .logo-image {
-        width: 34px;
-        height: auto;
-    }
-    .list-screen-content-container {
-        width: 72vw;
-    }
-    .list-screen-header-button-container {
-        width: 42px;
-    }
-    
+  .list-screen-header-title {
+    font-size: 14px;
+    line-height: 14px;
+  }
+  .logo-image {
+    width: 34px;
+    height: auto;
+  }
+  .list-screen-content-container {
+    width: 72vw;
+  }
+  .list-screen-header-button-container {
+    width: 42px;
+  }
 }
-
