--- a/src/components/Input/index.css
+++ b/src/components/Input/index.css
@@ -3,10 +3,10 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
-  width: 400px;
+  width: 95%;
   height: 48px;
   border-radius: 8px;
-  border: 2px solid var(--color-primary);
+  border: 2px solid #346c2f;
   margin-bottom: 16px;
 }
 
@@ -36,4 +36,14 @@
   .input-container {
     max-width: 300px;
   }
+}
+
+input[type=number]::-webkit-inner-spin-button { 
+  -webkit-appearance: none;
+  
+}
+input[type=number] { 
+ -moz-appearance: textfield;
+ appearance: textfield;
+
 }
